[package]
name = "rv_core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate_type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vfs = { path = "../../vfs" }
plugin_types = { path = "../plugin_types" }
services = { path = "../services" }
log = "0.4"
anyhow = "1.0"
libloading = "0.7.3"
walkdir = "2"
cfixed-string = "1"
pico-args = "0.4"
parking_lot = "0.12"

toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
crossbeam-channel = "0.5"
rand = "0.8.5"
