[package]
name = "services"
version = "0.1.0"
edition = "2021"
build = "build.rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1"

[dependencies]
anyhow = "1.0"
log = "0.4"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }


